--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,20 @@
   align-items: center;
   justify-content: space-between;
 }
+
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
+}
